# Anya-Bot

./: .deepsource.toml  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .gitmodules   CODE_OF_CONDUCT.md  DEPLOY_TO_RENDER.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO  cluster-run.py  const.py  depend.py  discloud.config  discord_imports.py  docker-compose.yml  main.py  maze.py  maze.txt  name.py  package-lock.json  package.json  pyproject.toml  readme.py  real_api_gacha_test.py  render.yaml  render.ymal  requirements.txt  space.py  start.ps1  test.txt  test_anya_safety.py  test_api_creds.py  test_api_sources.py  test_art.py  test_gallery.py  (+5 more)
.gemini/: cover_art_duplicate_detection.md
.github/: .env  .gitignore  ping.ymal
.run/: cluster-run.py
.storage/: pokemon.py  predict.py  test.py
.tools/: comment-remover.py  file-editor.py  file_fixer.py
.version_1/: main.py
Cogs/: ai.py  ampa.py  anime.py  detector.py  firstmessage.py  help.py  information.py  memo.py  ping.py  poke_gusser.py  pokemon.py  quest.py  sync.py  system.py  test.py
Data/: aesthetics.fl  const.py  emoji.json  images.py  pokemon_names.py  setup.py  token.py  uncommitted_changes.py
Events/: aesthetic.py  appearance.py  ascetics.py  bot-apperence.py  code_logger.py  logs.py  pokemon.py  poketwo_anti_thief.py  quest_events.py  quest_tools.py  tools.py
Imports/: depend_imports.py  discord_imports.py  log_imports.py
Subcogs/: anime.py  information.py  pokemon.py
anya-bot-website/: .env.production  .feature-cache.json  CHARACTER_DEX_API_GUIDE.md  CONSOLE_ERRORS_FIXED.md  MAJOR_REFACTOR.md  MONGODB_TOKEN_SETUP.md  MULTI_API_GUIDE.md  NO_STATIC_DATA.md  ROADMAP.md  SCRAPER_SETUP.md  SERVER_SIDE_CACHING.md  SETUP_INSTRUCTIONS.md  WEBSITE_IMPROVEMENTS.md  WEBSITE_UPDATES.md  firebase.json  index.html  package.json  tailwind.config.js  tsconfig.server.json  vite.config.ts
bot/: token.py
character-hosting/: .firebaserc  SETUP.md  (+15 more)
(+393 files in other folders)
