[project]
name = "anya-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "cringe-neko-girl",email = "166271770+cringe-neko-girl@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "motor (>=3.6.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "python-levenshtein (>=0.26.1,<0.27.0)",
    "scikit-image (>=0.25.1,<0.26.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "openai (>=1.60.2,<2.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imagehash (>=4.3.1,<5.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "asyncio-redis (>=0.16.0,<0.17.0)",
    "redis (>=5.2.1,<6.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "huggingface-hub (>=0.28.0,<0.29.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "cysimdjson (>=24.12,<25.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
