[project]
name = "anya-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "senko",email = "166271770+senko-sleep@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "discord-py (>=2.6.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
